--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+*
+    padding: 0
+    margin: 0
+    box-sizing: border-box
+    font-family: 'system-ui', sans-serif
+
+html
+    scrollbar-gutter: stable
+body
+    background-color: #F5F5F7
+
+ul
+    list-style-type: none
+    padding: 0
+    margin: 0
